# OptPriEngine

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  main.cpp
include/optpriengine/: BSMModel.h  BinomialTreeModel.h  Error.h  Option.h  OptionStyle.h  PricingEngine.h  PricingStrategy.h  StrategyParameters.h  Utils.h
src/: BSMModel.cpp  BSMModel.h  BinomialTreeModel.cpp  BinomialTreeModel.h  CMakeLists.txt  PricingEngine.cpp  PricingEngine.h  PricingStrategy.h  Utils.cpp  main.cpp
tests/: CMakeLists.txt  test_BSMModel.cpp  test_BinomialTreeModel.cpp
